[package]
name = "mini-chain"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["full", "tracing"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
futures = "0.3"
rand = "0.8"
async-recursion = "1.0.5"
colored = "2.0.0"
tokio-stream = "0.1"
console-subscriber = "0.1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-channel = "1.9.0"

[lib]
path = "src/lib.rs"
